--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,6 +232,7 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 1px 2px black;
+    margin-bottom: 10px;
 }
 
 div.container-fluid.category-title {
