--- a/public/css/style.css
+++ b/public/css/style.css
@@ -254,6 +254,7 @@ div.container-fluid.category-title .postbutton {
     border-radius: 5px;
     background-color: white;
     margin-top: 10px;
+    margin-right: 15px;
     font-family: BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     color: rgba(6, 30, 58, 0.685);
 }
