stylized layout and home page, adjusted color scheme

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -60,10 +60,12 @@
 
         <%= yield %>
 
-      <footer class="branding">
-        <small>&copy; 2018 <strong>FoodieFinds</strong></small>
-      </footer>
+  
     </div>
+
+    <footer class="branding fixed-bottom">
+        <small>&copy; 2018 <strong>FoodieFinds</strong></small>
+    </footer>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
