--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -2,30 +2,22 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 offset-sm-2 col-md-10 offset-md-2.5 col-lg-10 offset-lg-2.5">
+    <div class="col-sm-12 col-md-12 col-lg-12 justify-content-center">
       <header>
-        <p><h1>Find Unique Culinary Experiences</h1></p>
+        <p><h1 class="text-center welcometitle">Find Unique Culinary Experiences</h1></p>
       </header>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-12 mx-auto">
-      <br>
-
-      <div class="content">
-        <p>Welcome to Foodie Finds! Our goal is to provide an open forum for foodies nationwide in order bring awareness to the hidden culinary gems in your communities. To get started just pick the state you're interested in and pick the discussion board for a city. If you'd like to join the discussion, then you'll first need to create an account.</p>
-      </div>
-    </div>
-    
-        
-      </div>
-    </div> <!-- close .col -->
+    </div> <!-- close .col-sm-12 -->
   </div> <!-- close .row -->
+
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 mx-auto welcomeblurb">
+            <br>
+            <div>
+                <p>Welcome to Foodie Finds! Our goal is to provide an open forum for foodies nationwide in order bring awareness to the hidden culinary gems in your communities. To get started just pick the state you're interested in and pick the discussion board for a city. If you'd like to join the discussion, then you'll first need to create an account.</p>
+            </div>
+        </div> <!-- close .col -->
+    </div> <!-- close .row -->
 </div> <!-- close .container -->
-</div>
-
-
 
 <div class="container-fluid">
     <section class="flashmessage"><%= flash[:message] %></section>
