--- a/app/views/comments/edit.erb
+++ b/app/views/comments/edit.erb
@@ -1,21 +1,25 @@
-<div class="container-fluid category-title">
-  <div class="row">
-    <div class ="col-8">
-      <nav aria-label="breadcrumb customnav">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
-      </ol>
-      </nav>
-    </div>
+<!-- HEADER BREADCRUMBS -->
 
-    <div class=col-4 ml-1">
-      <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
-    </div>
-  </div>
-</div>
+<div class="container-fluid category-title">
+    <div class="row">
+        <div class ="col-8">
+            <nav aria-label="breadcrumb customnav">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
+                </ol>
+            </nav>
+        </div> <!-- close .col -->
+
+        <div class=col-4 ml-1">
+            <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
+        </div> <!-- close .col -->
+    </div> <!-- close .row -->
+</div> <!-- close .container -->
 
 <section class="flashmessage"><%= flash[:message] %></section>
+
+<!-- ORIGINAL COMMENT DISPLAY -->
 
 Original Comment:
 
@@ -44,22 +48,28 @@ Original Comment:
     </div> <!-- close .row -->
 </div> <!-- close.container-posting -->
 
-<form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= @comment.id %>" method="post">
-    <input id="hidden" type="hidden" name="_method" value="patch">
-        <div class="container new-comment">
+<!-- EDIT COMMENT -->
 
-                <div class="form-group">
-                    <label for="content">Content</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" name="comment[content]" rows="3" placeholder="<%= @comment.content %>"></textarea>
-                </div>
+<section>
+    <div class="container">
+        <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= @comment.id %>" method="post">
+            <input id="hidden" type="hidden" name="_method" value="patch">
+            <div class="container new-comment">
+                    <div class="form-group">
+                        <label for="content" id="comment-label">Edit Your Comment:</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" name="comment[content]" rows="3" placeholder="<%= @comment.content %>"></textarea>
+                    </div>
 
-                <input type="submit" class="btn btn-primary">
-            </form>
-       
-    </div> <!-- close .container -->
-</form>
+                    <input type="submit" class="btn btn-primary" id="comment-reply-button">
+            </div> <!-- close .container -->
+        </form>
 
-<form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= @comment.id %>/delete" method="post">
-    <input id="hidden" type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete">
-</form>
+        <!-- DELETE BUTTON -->
+
+        <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/<%= @comment.id %>/delete" method="post">
+            <input id="hidden" type="hidden" name="_method" value="delete">
+            <input type="submit" class="btn btn-primary" id="comment-delete-button" value="Delete">
+        </form>
+    </div>
+</section>
+
