updated spacing and layout for profile page posts

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <section class="flashmessage"><%= flash[:message] %></section>
 
-<div class="container new-post">
+<div class="container new-post profile-posts">
     <div class="row">
         <form action="/users/profile/<%= @user.id %>/edit" method="get">
 
@@ -19,39 +19,53 @@
 </div> <!-- close .container -->
 
 
-<h5>My Posts</h5>
-<% @posts.each do |post| %>
+<div class="container profile-posts">
+    <div class="row">
+        <h5>My Posts</h5>
+    </div>
+</div>
 
-    <div class="container posting">
-      <div class="row">
-          <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
-            <div class="post">
-              <div class="row">
-                <div class="col-3 user-info pull-left align-self-center">
-                    <div class="avatar">
-                      <img src="../images/no-photo.png" class="align-self-center mr-2">
-                      <p><%=(User.find(post.user_id)).username%></p>
-                      <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%=post.score%></form>
+<% if @posts != [] %>
+    <% @posts.each do |post| %>
+
+        <div class="container posting">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
+                <div class="post">
+                <div class="row">
+                    <div class="col-3 user-info pull-left align-self-center">
+                        <div class="avatar">
+                        <img src="../images/no-photo.png" class="align-self-center mr-2">
+                        <p><%=(User.find(post.user_id)).username%></p>
+                        <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%=post.score%></form>
+                        </div>
                     </div>
-                </div>
-                  
-                <div class="col-9 post-info pull-left">
-                    <div class="post-title">
-                      <section><a href="/categories/<%= Category.find(post.category_id).title %>/posts/<%= post.id %>"><%= post.city.split(" ").map{|word| word.capitalize}.join(" ") %> / <%= post.title %></a></section>
-                      <section><%=post.location%></section>
+                    
+                    <div class="col-9 post-info pull-left">
+                        <div class="post-title">
+                        <section><a href="/categories/<%= Category.find(post.category_id).title %>/posts/<%= post.id %>"><%= post.city.split(" ").map{|word| word.capitalize}.join(" ") %> / <%= post.title %></a></section>
+                        <section><%=post.location%></section>
+                        </div>
+                        <p><%=post.content%></p>    
+                        <section class="replies-count">Replies: <%=post.comments.count%></section>
+                        <section class="post-footer">Posted at <%= post.created_at %></section>
                     </div>
-                    <p><%=post.content%></p>    
-                    <section class="replies-count">Replies: <%=post.comments.count%></section>
-                    <section class="post-footer">Posted at <%= post.created_at %></section>
-                </div>
-                  
-                <div class="postbottom">
-                    <div class="clearfix"></div>
-                </div>
-              </div> <!-- close .row -->
-            </div> <!-- close .post -->
-         </div> <!-- close .col-sm -->
-      </div> <!-- close .row -->
-    </div> <!-- close.container-posting -->
-    
+                    
+                    <div class="postbottom">
+                        <div class="clearfix"></div>
+                    </div>
+                </div> <!-- close .row -->
+                </div> <!-- close .post -->
+            </div> <!-- close .col-sm -->
+        </div> <!-- close .row -->
+        </div> <!-- close.container-posting -->    
+    <% end %>
+<% else %>
+
+<div class="container">
+    <div class="row">
+        <p> You haven't posted anything yet. <p>
+    </div>
+</div>
+
 <% end %>
